--- a/css/main.css
+++ b/css/main.css
@@ -42,13 +42,29 @@ body, html {
 .name {
   font-family: Merriweather;
   font-size: 45px;
-  padding: 12px;
-  border: 4px solid #FF3300;
+  /*padding: 12px;*/
+  /*border: 4px solid #FF3300;*/
   color: var(--main-text-color);
   display: inline-block;
   margin: 0px;
   line-height: 1.2em;
 }
+
+header {
+  /*display: flex;*/
+  /*justify-content: space-between;*/
+  color: var(--main-text-color);
+  font-size: 1em;
+  border-width: 1px;
+  /*border-style: solid;*/
+}
+
+nav {
+  color: var(--main-text-color);
+  font-size: 2em;
+  text-align: right;
+}
+
 
 .wrapper {box-sizing: border-box; height: 100%; overflow: auto; border: 4px solid}
 
@@ -86,4 +102,4 @@ hr {border-bottom: 3px solid #0068FF; border: 4px solid}
 
 footer .inline-list li {margin-right: 40px;}
 footer a {border: none; color: #FF3300;}
-footer {margin: 0 auto; position: absolute; bottom: 55%; right: -255px; padding: 40px 0 0 0; width: 600px; -webkit-transform: rotate(-90deg); border: 4px solid}
+footer {margin: 0 auto; position: absolute; bottom: 55%; right: -255px; padding: 40px 0 0 0; width: 600px; -webkit-transform: rotate(-90deg);}
