--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,9 @@ body, html {
 
 .content {
   background-color: transparent;
-  width: 75%;
-  max-width: 768px;
-  margin: 12% auto 0 auto;
+  width: 90%;
+  max-width: 1024px;
+  margin: 5% auto 0 auto;
   /*padding-top: 60px;*/
   /*padding-bottom: 60px;*/
 }
@@ -32,7 +32,7 @@ body, html {
 .profile {
   float: left;
   width: 38%;
-  margin-right: 10px;
+  margin: 20px;
 }
 
 .article {
@@ -51,18 +51,19 @@ body, html {
 }
 
 header {
-  /*display: flex;*/
-  /*justify-content: space-between;*/
+  display: flex;
+  justify-content: space-between;
   color: var(--main-text-color);
   font-size: 1em;
-  border-width: 1px;
-  /*border-style: solid;*/
+  border-bottom: 2px solid;
+  margin: 20px;
 }
 
 nav {
   color: var(--main-text-color);
   font-size: 2em;
   text-align: right;
+  margin: 15px;
 }
 
 
