--- a/css/main.css
+++ b/css/main.css
@@ -44,15 +44,17 @@ header {
   font-size: 45px;
   color: var(--style-text-color);
   display: inline-block;
-  margin: 0px;
+  margin: 10px;
   line-height: 1.2em;
+/*  border: 4px solid;
+  border-color: var(--style-text-color);*/
 }
 
 nav {
   color: var(--style-text-color);
   font-size: 1.5em;
   text-align: right;
-  margin-top: 20px;
+  margin-top: 30px;
   height: 50%;
   bottom: 0px;
   letter-spacing: 0.2em;
