Added some hyperlinks.

--- a/css/main.css
+++ b/css/main.css
@@ -69,30 +69,36 @@ nav {
 article {
   margin: 20px;
   padding: 0px;
-  overflow: scroll;
 }
 
 .profile {
   float: left;
   width: 38%;
-  margin: 20px;
+  margin: 20px 20px 0px 20px;
   padding: 0px;
 }
 
 a {
+  text-decoration: none;
+  color: var(--style-text-color);
+}
+
+p {
+  font-weight: 200;
+  font-size: 20px;
+  line-height: 1.5em;
+}
+
+p a {
   text-decoration: none;
   color: #333;
   border-bottom: 2px solid;
   border-color: var(--style-text-color);
 }
 
-a:hover {
+p a:hover {
   color: var(--style-text-color);
   border-color: var(--style-text-color);
-}
-
-p {
-  font-weight: 200; font-size: 20px;
 }
 
 .meta {text-transform: uppercase; font-family: Arial, Courier New, Source Sans Pro, sans-serif; font-size: 10px; letter-spacing: .15em;}
