--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,12 @@ nav {
   letter-spacing: 0.2em;
 }
 
+@media (max-width: 384px) {
+    .name {
+        width: 40%;
+    }
+}
+
 article {
   margin: 20px;
   padding: 0px;
